--- a/.github/workflows/system.yml
+++ b/.github/workflows/system.yml
@@ -2,23 +2,21 @@ name: System Monitor
 
 on:
   workflow_dispatch:
-  schedule:
-    - cron: "0 */6 * * *"  # Jalan otomatis setiap 6 jam (loop internal)
 
 jobs:
-  sys-task:
+  bot:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Setup System
-      uses: actions/setup-node@v3
-      with:
-        node-version: 18
+      - name: Checkout
+        uses: actions/checkout@v3
 
-    - name: Install Dependencies
-      run: |
-        npm install puppeteer puppeteer-extra puppeteer-extra-plugin-stealth user-agents
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18'
 
-    - name: Run System Service
-      run: |
-        node index.js
+      - name: Install Dependencies
+        run: npm install
+
+      - name: Start Bot
+        run: node index.js
