--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,13 +1,14 @@
-name: System Stealth Bot
+name: System Monitor
 
 on:
   schedule:
-    - cron: '0 */5 * * *'  # Setiap 5 jam
+    - cron: "0 */5 * * *" # restart tiap 5 jam otomatis
   workflow_dispatch:
 
 jobs:
-  run-bot:
+  run:
     runs-on: ubuntu-latest
+    timeout-minutes: 350 # biar auto stop sebelum limit 360 menit (6 jam)
 
     steps:
       - name: Checkout repo
@@ -16,11 +17,10 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '18'
+          node-version: 18
 
       - name: Install dependencies
-        run: |
-          npm install puppeteer puppeteer-extra puppeteer-extra-plugin-stealth user-agents
+        run: npm install
 
-      - name: Run bot stealth
+      - name: Run stealth bot
         run: node index.js
