--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "adsterra-bot",
   "version": "1.0.0",
   "main": "index.js",
+  "scripts": {
+    "start": "node index.js"
+  },
   "dependencies": {
-    "puppeteer": "^21.3.8",
-    "puppeteer-extra": "^3.3.4",
-    "puppeteer-extra-plugin-stealth": "^2.11.1",
-    "user-agents": "^1.0.1224"
+    "puppeteer": "^21.3.8"
   }
 }
