--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,17 +1,16 @@
-name: System Monitor
+name: Auto Adsterra Bot
 
 on:
   schedule:
-    - cron: "0 */5 * * *" # restart tiap 5 jam otomatis
+    - cron: '0 */5 * * *'  # Restart tiap 5 jam
   workflow_dispatch:
 
 jobs:
   run:
     runs-on: ubuntu-latest
-    timeout-minutes: 350 # biar auto stop sebelum limit 360 menit (6 jam)
 
     steps:
-      - name: Checkout repo
+      - name: Checkout
         uses: actions/checkout@v3
 
       - name: Setup Node.js
@@ -22,5 +21,5 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Run stealth bot
+      - name: Start Bot
         run: node index.js
